--- a/HWJ/Makefile
+++ b/HWJ/Makefile
@@ -7,7 +7,10 @@ FC=$(COMPILER)
 PDF=lhapdf
 #Choose Analysis: dummy, HWnJ
 ## default analysis may require FASTJET package, that has to be installed separately (see below)
-ANALYSIS=HWnJ
+# the following was the analysis used in the paper
+#ANALYSIS=HWnJ
+# analysis to compare with the resonance version
+ANALYSIS=HWnJ_res
 ## For static linking uncomment the following
 #STATIC= -static
 #
@@ -16,7 +19,7 @@ OBJ=obj-$(COMPILER)
 OBJDIR:=$(OBJ)
 
 ifeq ("$(COMPILER)","gfortran")	
-F77=gfortran -fno-automatic -J$(OBJ) -I$(OBJ)
+F77=gfortran -fno-automatic -ffixed-line-length-none -J$(OBJ) -I$(OBJ) 
 ## -fbounds-check sometimes causes a weird error due to non-lazy evaluation
 ## of boolean in gfortran.
 #FFLAGS= -Wall -Wimplicit-interface -fbounds-check
@@ -92,6 +95,17 @@ PWHGANAL=pwhg_bookhist-multi.o pwhg_analysis-HWnJ.o observables.o
 #PWHGANAL+= fastjetsisconewrap.o fastjetktwrap.o fastjetCDFMidPointwrap.o fastjetD0RunIIConewrap.o fastjetfortran.o
 #PWHGANAL+= fastjetsisconewrap.o fastjetktwrap.o fastjetfortran.o
 PWHGANAL+=  fastjetfortran.o
+endif
+ifeq ("$(ANALYSIS)","HWnJ_res")
+##To include Fastjet configuration uncomment the following lines. 
+FASTJET_CONFIG=$(shell which fastjet-config)
+LIBSFASTJET += $(shell $(FASTJET_CONFIG) --libs --plugins ) -lstdc++
+FJCXXFLAGS+= $(shell $(FASTJET_CONFIG) --cxxflags)
+PWHGANAL=pwhg_bookhist-multi.o pwhg_analysis-HWnJ_res.o observables.o 
+## Also add required Fastjet drivers to PWHGANAL (examples are reported)
+#PWHGANAL+= fastjetsisconewrap.o fastjetktwrap.o fastjetCDFMidPointwrap.o fastjetD0RunIIConewrap.o fastjetfortran.o
+#PWHGANAL+= fastjetsisconewrap.o fastjetktwrap.o fastjetfortran.o
+PWHGANAL+=  fastjetfortran.o
 else
 PWHGANAL=pwhg_analysis-dummy.o
 endif
@@ -122,7 +136,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 	init_phys.o powheginput.o pdfcalls.o sigreal.o sigcollremn.o	\
 	pwhg_analysis_driver.o checkmomzero.o		                \
 	setstrongcoupl.o integrator.o newunit.o mwarn.o sigsoftvirt.o	\
-	reshufflemoms.o pwhg_gosam.o                                    \
+	reshufflemoms.o pwhg_gosam.o  boostrot4.o   \
 	sigcollsoft.o sigvirtual.o  ubprojections.o                     \
 	pwhgreweight.o setlocalscales.o mint_upb.o opencount.o          \
 	validflav.o $(PDFPACK) $(USER) $(FPEOBJ)
