added extra info in pwhg_analisys_driver.f; bug fixed in pwhg_analysis.f and in pwhg_analysis-atlas.f (pt_j not initialized); tag clean corrected in Makefile
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3164 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/Wgamma/Makefile
+++ b/Wgamma/Makefile
@@ -187,7 +187,7 @@ main-PYTHIA8-lhef: $(PYTHIA8)
 # target to cleanup
 .PHONY: clean
 clean:
-	rm -f $(OBJ)/*.o pwhg_main lhef_analysis main-HERWIG-lhef	\
+	rm -f $(OBJ)/*.o $(OBJ)/MCFM/*.o pwhg_main lhef_analysis main-HERWIG-lhef	\
 	main-PYTHIA-lhef main-PYTHIA8-lhef
 
 # target to cleanup
