Reverting commit 3175 and fixing Makefile warnings
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3176 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/gg_H/Makefile
+++ b/gg_H/Makefile
@@ -45,9 +45,8 @@ WDNAME=$(shell basename $(PWD))
 VPATH= ./:../:obj/
 
 INCLUDE0=$(PWD)
-INCLUDE1=$(PWD)/include
-INCLUDE2=$(shell dirname $(PWD))/include
-FF+= $(FFLAGS) $(FPE) $(OPT) $(DEBUG) -I$(INCLUDE0) -I$(INCLUDE1) -I$(INCLUDE2)
+INCLUDE1=$(shell dirname $(PWD))/include
+FF+= $(FFLAGS) $(FPE) $(OPT) $(DEBUG) -I$(INCLUDE0) -I$(INCLUDE1) 
 
 INCLUDE =$(wildcard ../include/*.h *.h include/*.h)
 
