added analysis to compare with POWHEG-BOX-RES
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3183 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/HWJ/Makefile
+++ b/HWJ/Makefile
@@ -8,9 +8,9 @@ PDF=lhapdf
 #Choose Analysis: dummy, HWnJ
 ## default analysis may require FASTJET package, that has to be installed separately (see below)
 # the following was the analysis used in the paper
-ANALYSIS=HWnJ
+#ANALYSIS=HWnJ
 # analysis to compare with the resonance version
-#ANALYSIS=HWnJ_res
+ANALYSIS=HWnJ_res
 ## For static linking uncomment the following
 #STATIC= -static
 #
@@ -90,7 +90,7 @@ ifeq ("$(ANALYSIS)","HWnJ")
 FASTJET_CONFIG=$(shell which fastjet-config)
 LIBSFASTJET += $(shell $(FASTJET_CONFIG) --libs --plugins ) -lstdc++
 FJCXXFLAGS+= $(shell $(FASTJET_CONFIG) --cxxflags)
-PWHGANAL=pwhg_bookhist-multi.o pwhg_analysis-HWnJ.o observables.o 
+PWHGANAL=pwhg_bookhist-multi.o pwhg_analysis-HWnJ.o observables.o
 ## Also add required Fastjet drivers to PWHGANAL (examples are reported)
 #PWHGANAL+= fastjetsisconewrap.o fastjetktwrap.o fastjetCDFMidPointwrap.o fastjetD0RunIIConewrap.o fastjetfortran.o
 #PWHGANAL+= fastjetsisconewrap.o fastjetktwrap.o fastjetfortran.o
@@ -102,7 +102,7 @@ ifeq ("$(ANALYSIS)","HWnJ_res")
 FASTJET_CONFIG=$(shell which fastjet-config)
 LIBSFASTJET += $(shell $(FASTJET_CONFIG) --libs --plugins ) -lstdc++
 FJCXXFLAGS+= $(shell $(FASTJET_CONFIG) --cxxflags)
-PWHGANAL=pwhg_bookhist-multi.o pwhg_analysis-HWnJ_res.o observables.o 
+PWHGANAL=pwhg_bookhist-multi.o pwhg_analysis-HWnJ_res.o observables.o boostrot4.o
 ## Also add required Fastjet drivers to PWHGANAL (examples are reported)
 #PWHGANAL+= fastjetsisconewrap.o fastjetktwrap.o fastjetCDFMidPointwrap.o fastjetD0RunIIConewrap.o fastjetfortran.o
 #PWHGANAL+= fastjetsisconewrap.o fastjetktwrap.o fastjetfortran.o
@@ -137,7 +137,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 	init_phys.o powheginput.o pdfcalls.o sigreal.o sigcollremn.o	\
 	pwhg_analysis_driver.o checkmomzero.o		                \
 	setstrongcoupl.o integrator.o newunit.o mwarn.o sigsoftvirt.o	\
-	reshufflemoms.o pwhg_gosam.o  boostrot4.o   \
+	reshufflemoms.o pwhg_gosam.o   \
 	sigcollsoft.o sigvirtual.o  ubprojections.o                     \
 	pwhgreweight.o setlocalscales.o mint_upb.o opencount.o          \
 	validflav.o $(PDFPACK) $(USER) $(FPEOBJ)
