--- a/bbH/Makefile-old
+++ b/bbH/Makefile-old
@@ -66,8 +66,7 @@ LIBFILES=$(shell  for dir in ./Madlib ./MODEL ./DHELAS ; do cd $$dir ; echo *.[f
 ifeq ("$(PDF)","lhapdf")
 # insert your local path to LHAPDF here:
 LHAPDF_CONFIG=lhapdf-config
-PDFPACK=lhapdf6if.o lhapdf6ifcc.o
-FJCXXFLAGS+= $(shell $(LHAPDF_CONFIG) --cxxflags)
+PDFPACK=lhapdfif.o
 LIBSLHAPDF=-Wl,-rpath,$(shell $(LHAPDF_CONFIG) --libdir)  -L$(shell $(LHAPDF_CONFIG) --libdir) -lLHAPDF
 ifeq  ("$(STATIC)","-static") 
 ## If LHAPDF has been compiled with gfortran and you want to link it statically, you have to include
@@ -114,7 +113,6 @@ endif
 
 
 # genuine bbH code:
-LIBS+=-lz
 USER=init_couplings.o init_processes.o Born_phsp.o Born.o virtual.o \
      bbh_virt_interface.o real.o  $(PWHGANAL)
 
@@ -130,7 +128,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 	reshufflemoms.o                                                 \
 	sigcollsoft.o sigvirtual.o  ubprojections.o                     \
 	pwhgreweight.o setlocalscales.o mint_upb.o opencount.o          \
-	validflav.o $(PDFPACK) $(USER) $(FPEOBJ) lhefread.o pwhg_io_interface.o rwl_weightlists.o rwl_setup_param_weights.o
+	validflav.o $(PDFPACK) $(USER) $(FPEOBJ)
 
 LIBDIRMG=$(OBJ)
 LINKMGLIBS=-L$(LIBDIRMG) -lmadgraph -lmodel -ldhelas3 -lvirtb
@@ -144,7 +142,7 @@ pwhg_main: $(PWHG) $(MADLIBS)
 
 LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o		\
      opencount.o powheginput.o printleshouches.o $(PWHGANAL)	\
-     lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
+     lhefread.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
 
 # target to analyze LHEF output
 lhef_analysis:$(LHEF)
@@ -152,7 +150,7 @@ lhef_analysis:$(LHEF)
 
 # target to read event file, shower events with PYTHIA + analysis
 PYTHIA=main-PYTHIA.o setup-PYTHIA.o pythia.o boostrot.o powheginput.o \
-	$(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o printleshouches.o		\
+	$(PWHGANAL) lhefread.o newunit.o printleshouches.o		\
 	pwhg_analysis_driver.o random.o cernroutines.o opencount.o	\
 	$(FPEOBJ)
 
@@ -199,4 +197,3 @@ $(OBJDIR):
 	mkdir -p $(OBJDIR)
 
 ##########################################################################
-
