--- a/DMS_tloop/Makefile-old
+++ b/DMS_tloop/Makefile-old
@@ -77,8 +77,7 @@ INCLUDE =$(wildcard ../include/*.h *.h include/*.h)
 
 ifeq ("$(PDF)","lhapdf")
 LHAPDF_CONFIG=lhapdf-config
-PDFPACK=lhapdf6if.o lhapdf6ifcc.o
-FJCXXFLAGS+= $(shell $(LHAPDF_CONFIG) --cxxflags)
+PDFPACK=lhapdfif.o
 LIBSLHAPDF= -Wl,-rpath,$(shell $(LHAPDF_CONFIG) --libdir)  -L$(shell $(LHAPDF_CONFIG) --libdir) -lLHAPDF
 ifeq  ("$(STATIC)","-static") 
 ## If LHAPDF has been compiled with gfortran and you want to link it statically, you have to include
@@ -230,7 +229,7 @@ pythia.o: pythia.f
 
 %.o: %.cpp
 	$(CXX) $(DEBUG) -c -o obj/$@ $^ $(FJCXXFLAGS)
-LIBS+=-lz
+
 USER=init_couplings.o init_processes.o Born_phsp.o Born.o virtual.o	\
      real.o $(PWHGANAL)
 
@@ -251,7 +250,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 	sigcollsoft.o sigvirtual.o setlocalscales.o validflav.o mint_upb.o  \
 	pwhgreweight.o opencount.o ubprojections.o  \
 	reshufflemoms.o                                                 \
-	$(PDFPACK) $(USER) $(FPEOBJ) $(MCFMFILES) lhefread.o pwhg_io_interface.o rwl_weightlists.o rwl_setup_param_weights.o
+	$(PDFPACK) $(USER) $(FPEOBJ) $(MCFMFILES)
 
 LIBDIRMG=.
 LINKMGLIBS =  -L$(LIBDIRMG)  # -lmadgraph -lmodel -ldhelas3 
@@ -262,7 +261,7 @@ pwhg_main:$(PWHG)   $(MADLIBS)
 
 LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o		\
      opencount.o powheginput.o $(PWHGANAL)	\
-     lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pwhg_analysis_driver.o bra_ket_subroutines.o $(FPEOBJ)
+     lhefread.o newunit.o pwhg_analysis_driver.o bra_ket_subroutines.o $(FPEOBJ)
 
 # target to analyze LHEF output
 lhef_analysis:$(LHEF)
@@ -272,7 +271,7 @@ lhef_analysis:$(LHEF)
 
 # target to read event file, shower events with HERWIG + analysis
 HERWIG=main-HERWIG.o setup-HERWIG-lhef.o herwig.o boostrot.o	\
-	powheginput.o $(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o	\
+	powheginput.o $(PWHGANAL) lhefread.o	\
 	pdfdummies.o opencount.o $(FPEOBJ) 
 
 main-HERWIG-lhef: $(HERWIG)
@@ -280,7 +279,7 @@ main-HERWIG-lhef: $(HERWIG)
 
 # target to read event file, shower events with PYTHIA + analysis
 PYTHIA=main-PYTHIA.o setup-PYTHIA-lhef.o pythia.o boostrot.o powheginput.o		\
-	$(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pdfdummies.o bra_ket_subroutines.o	\
+	$(PWHGANAL) lhefread.o newunit.o pdfdummies.o bra_ket_subroutines.o	\
 	pwhg_analysis_driver.o random.o cernroutines.o opencount.o	\
 	$(FPEOBJ)
 
@@ -289,7 +288,7 @@ main-PYTHIA-lhef: $(PYTHIA)
 
 
 PYTHIA8=main-PYTHIA8.o pythia8F77.o boostrot.o powheginput.o \
-	$(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pdfdummies.o		\
+	$(PWHGANAL) lhefread.o newunit.o pdfdummies.o		\
 	pwhg_analysis_driver.o random.o cernroutines.o opencount.o	\
 	$(FPEOBJ)
 
@@ -331,4 +330,3 @@ clean:
 veryclean:
 	rm -f obj/*.o pwhg_main lhef_analysis main-HERWIG-lhef	\
 	main-PYTHIA-lhef *.a DHELAS/*.o Madlib/*.o MODEL/*.o
-
