--- a/DMV/Makefile-old
+++ b/DMV/Makefile-old
@@ -66,8 +66,7 @@ INCLUDE =$(wildcard ../include/*.h *.h include/*.h)
 
 ifeq ("$(PDF)","lhapdf")
 LHAPDF_CONFIG=lhapdf-config
-PDFPACK=lhapdf6if.o lhapdf6ifcc.o
-FJCXXFLAGS+= $(shell $(LHAPDF_CONFIG) --cxxflags)
+PDFPACK=lhapdfif.o
 LIBSLHAPDF= -Wl,-rpath,$(shell $(LHAPDF_CONFIG) --libdir)  -L$(shell $(LHAPDF_CONFIG) --libdir) -lLHAPDF
 ifeq  ("$(STATIC)","-static")
 ## If LHAPDF has been compiled with gfortran and you want to link it statically, you have to include
@@ -147,7 +146,7 @@ pythia.o: pythia.f
 
 %.o: %.cc
 	$(CXX) $(DEBUG) -c -o obj/$@ $^ $(FJCXXFLAGS)
-LIBS+=-lz
+
 USER=init_couplings.o init_processes.o Born_phsp.o Born.o virtual.o \
 	real.o $(PWHGANAL) \
 	BornHelicityAmplitudes.o VirtHelicityAmplitudes.o ${MADGRAPH}
@@ -163,7 +162,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 	sigcollsoft.o sigvirtual.o setlocalscales.o validflav.o mint_upb.o  \
 	pwhgreweight.o opencount.o ubprojections.o  \
 	reshufflemoms.o                                                 \
-	$(PDFPACK) $(USER) $(FPEOBJ) lhefread.o pwhg_io_interface.o rwl_weightlists.o rwl_setup_param_weights.o
+	$(PDFPACK) $(USER) $(FPEOBJ)
 
 # target to generate LHEF output
 pwhg_main:$(PWHG)
@@ -171,7 +170,7 @@ pwhg_main:$(PWHG)
 
 LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o		\
      opencount.o powheginput.o $(PWHGANAL)	\
-     lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
+     lhefread.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
 
 # target to analyze LHEF output
 lhef_analysis:$(LHEF)
@@ -181,7 +180,7 @@ lhef_analysis:$(LHEF)
 
 # target to read event file, shower events with HERWIG + analysis
 HERWIG=main-HERWIG.o setup-HERWIG-lhef.o herwig.o boostrot.o	\
-	powheginput.o $(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o	\
+	powheginput.o $(PWHGANAL) lhefread.o	\
 	pdfdummies.o opencount.o $(FPEOBJ) 
 
 main-HERWIG-lhef: $(HERWIG)
@@ -189,7 +188,7 @@ main-HERWIG-lhef: $(HERWIG)
 
 # target to read event file, shower events with PYTHIA + analysis
 PYTHIA=main-PYTHIA.o setup-PYTHIA-lhef.o pythia.o boostrot.o powheginput.o		\
-	$(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pdfdummies.o	\
+	$(PWHGANAL) lhefread.o newunit.o pdfdummies.o	\
 	pwhg_analysis_driver.o random.o cernroutines.o opencount.o	\
 	$(FPEOBJ)
 
@@ -198,7 +197,7 @@ main-PYTHIA-lhef: $(PYTHIA)
 
 
 PYTHIA8=main-PYTHIA8.o pythia8F77.o boostrot.o powheginput.o \
-	$(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pdfdummies.o		\
+	$(PWHGANAL) lhefread.o newunit.o pdfdummies.o		\
 	pwhg_analysis_driver.o random.o cernroutines.o opencount.o	\
 	$(FPEOBJ)
 
@@ -207,7 +206,7 @@ main-PYTHIA8-lhef: $(PYTHIA8)
 
 
 PYTHIA831=main-PYTHIA831.o pythia831F77.o boostrot.o powheginput.o \
-	$(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pdfdummies.o		\
+	$(PWHGANAL) lhefread.o newunit.o pdfdummies.o		\
 	pwhg_analysis_driver.o random.o cernroutines.o opencount.o	\
 	$(FPEOBJ)
 
@@ -221,5 +220,4 @@ main-PYTHIA831-lhef: $(PYTHIA831)
 clean:
 	rm -f obj/*.o pwhg_main lhef_analysis main-HERWIG-lhef	\
 	main-PYTHIA-lhef main-PYTHIA8-lhef main-PYTHIA831-lhef
-
 
