--- a/gg_H_2HDM/Makefile-old
+++ b/gg_H_2HDM/Makefile-old
@@ -71,8 +71,7 @@ INCLUDE =$(wildcard *.h *.h include/*.h)
 
 ifeq ("$(PDF)","lhapdf")
 LHAPDF_CONFIG=lhapdf-config
-PDFPACK=lhapdf6if.o lhapdf6ifcc.o
-FJCXXFLAGS+= $(shell $(LHAPDF_CONFIG) --cxxflags)
+PDFPACK=lhapdfif.o
 LIBSLHAPDF= -Wl,-rpath,$(shell $(LHAPDF_CONFIG) --libdir)  -L$(shell $(LHAPDF_CONFIG) --libdir) -lLHAPDF
 ifeq  ("$(STATIC)","-static") 
 ## If LHAPDF has been compiled with gfortran and you want to link it statically, you have to include
@@ -139,7 +138,7 @@ FeynHiggsInterface.o: FeynHiggsInterface.f
 
 DDSgluodd-abdv.o: DDSgluodd-abdv.f
 	gfortran -c -o obj/$@ $<
-LIBS+=-lz
+
 USER=init_couplings.o init_processes.o Born_phsp.o Born.o virtual.o \
         real.o btilde.o pt2maxreg.o LesHouchesreg.o $(PWHGANAL)     \
 	nloreal.o nlovirt.o nloutils.o      \
@@ -156,7 +155,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o lhefwrite.o LesHouches.o		\
 	pdfcalls.o sigreal.o sigcollremn.o pwhg_bookhist-multi.o	\
 	pwhg_analysis_driver.o checkmomzero.o setstrongcoupl.o		\
 	integrator.o newunit.o mwarn.o sigsoftvirt.o sigcollsoft.o	\
-	sigvirtual.o $(NEWV2) $(PDFPACK) $(USER) $(FPEOBJ) lhefread.o pwhg_io_interface.o rwl_weightlists.o rwl_setup_param_weights.o
+	sigvirtual.o $(NEWV2) $(PDFPACK) $(USER) $(FPEOBJ)
 
 # target to generate LHEF output
 pwhg_main:$(PWHG)
@@ -164,7 +163,7 @@ pwhg_main:$(PWHG)
 
 LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o		\
      opencount.o powheginput.o pwhg_bookhist-multi.o $(PWHGANAL)	\
-     lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
+     lhefread.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
 
 # target to analyze LHEF output
 lhef_analysis:$(LHEF)
@@ -172,7 +171,7 @@ lhef_analysis:$(LHEF)
 
 # target to read event file, shower events with HERWIG + analysis
 HERWIG=main-HERWIG.o setup-HERWIG-lhef.o herwig.o boostrot.o	\
-	powheginput.o pwhg_bookhist-multi.o cernroutines.o newunit.o $(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o	\
+	powheginput.o pwhg_bookhist-multi.o cernroutines.o newunit.o $(PWHGANAL) lhefread.o	\
 	pdfdummies.o opencount.o $(FPEOBJ) 
 
 main-HERWIG-lhef: $(HERWIG)
@@ -180,7 +179,7 @@ main-HERWIG-lhef: $(HERWIG)
 
 # target to read event file, shower events with PYTHIA + analysis
 PYTHIA=main-PYTHIA.o setup-PYTHIA-lhef.o pythia.o boostrot.o powheginput.o		\
-	pwhg_bookhist-multi.o $(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pdfdummies.o	\
+	pwhg_bookhist-multi.o $(PWHGANAL) lhefread.o newunit.o pdfdummies.o	\
 	pwhg_analysis_driver.o random.o cernroutines.o opencount.o	\
 	$(FPEOBJ)
 
@@ -192,4 +191,3 @@ main-PYTHIA-lhef: $(PYTHIA)
 clean:
 	rm -f obj/*.o *.mod pwhg_main lhef_analysis main-HERWIG-lhef	\
 	main-PYTHIA-lhef btilde_ggH.f sigremnants_ggH.f
-
