New Makefile for new rwgt
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3274 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/trijet/Makefile-old
+++ b/trijet/Makefile-old
@@ -75,8 +75,7 @@ INCLUDE =$(wildcard ../include/*.h *.h include/*.h)
 
 ifeq ("$(PDF)","lhapdf")
 LHAPDF_CONFIG=lhapdf-config
-PDFPACK=lhapdf6if.o lhapdf6ifcc.o
-FJCXXFLAGS+= $(shell $(LHAPDF_CONFIG) --cxxflags)
+PDFPACK=lhapdfif.o
 LIBSLHAPDF= -Wl,-rpath,$(shell $(LHAPDF_CONFIG) --libdir)  -L$(shell $(LHAPDF_CONFIG) --libdir) -lLHAPDF
 ifeq  ("$(STATIC)","-static") 
 ## If LHAPDF has been compiled with gfortran and you want to link it statically, you have to include
@@ -181,7 +180,7 @@ endif
 
 %.o: %.cc | $(OBJ)
 	$(CXX) $(DEBUG) -c -o $(OBJ)/$@ $^ $(FJCXXFLAGS) $(CXXFLAGS)
-LIBS+=-lz
+
 USER= init_processes_born_real.o init_processes.o  init_couplings.o \
      Born_phsp.o Born.o virtual.o real.o  $(PWHGANAL)
 
@@ -197,7 +196,7 @@ PWHG= $(USER) pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 	reshufflemoms.o \
 	sigcollsoft.o sigvirtual.o  ubprojections.o                     \
 	pwhgreweight.o setlocalscales.o mint_upb.o opencount.o          \
-	merging.o validflav.o $(PDFPACK) $(FPEOBJ) lhefread.o pwhg_io_interface.o rwl_weightlists.o rwl_setup_param_weights.o
+	merging.o validflav.o $(PDFPACK) $(FPEOBJ)
 
 LIBDIRMG=$(OBJ)
 LINKMGLIBS =  -L$(LIBDIRMG)  -lmadgraph -lmodel -ldhelas3 
@@ -214,7 +213,7 @@ pwhg_main: $(PWHG) $(MADLIBS) $(NLOJETLIB)
 
 LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o		\
      opencount.o powheginput.o $(PWHGANAL)	\
-     lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
+     lhefread.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
 
 # target to analyze LHEF output
 lhef_analysis:$(LHEF)
@@ -224,7 +223,7 @@ lhef_analysis:$(LHEF)
 
 # target to read event file, shower events with HERWIG + analysis
 HERWIG=main-HERWIG.o setup-HERWIG-lhef.o herwig.o boostrot.o bra_ket_subroutines.o	\
-	powheginput.o $(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pdfdummies.o changescalup.o	\
+	powheginput.o $(PWHGANAL) lhefread.o newunit.o pdfdummies.o changescalup.o	\
 	pwhg_analysis_driver.o random.o cernroutines.o opencount.o $(FPEOBJ) 
 
 main-HERWIG-lhef: $(HERWIG)
@@ -232,7 +231,7 @@ main-HERWIG-lhef: $(HERWIG)
 
 # target to read event file, shower events with HERWIG + analysis
 HERWIGNOHAD=main-HERWIG-nohad.o setup-HERWIG-lhef.o herwig.o boostrot.o bra_ket_subroutines.o	\
-	powheginput.o $(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pdfdummies.o changescalup.o	\
+	powheginput.o $(PWHGANAL) lhefread.o newunit.o pdfdummies.o changescalup.o	\
 	pwhg_analysis_driver.o random.o cernroutines.o opencount.o $(FPEOBJ) 
 
 main-HERWIGNOHAD-lhef: $(HERWIGNOHAD)
@@ -240,7 +239,7 @@ main-HERWIGNOHAD-lhef: $(HERWIGNOHAD)
 
 # target to read event file, shower events with PYTHIA + analysis
 PYTHIA=main-PYTHIA.o setup-PYTHIA-lhef.o pythia.o boostrot.o powheginput.o \
-	$(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o bra_ket_subroutines.o	\
+	$(PWHGANAL) lhefread.o newunit.o bra_ket_subroutines.o	\
         reshufflemoms.o changescalup.o \
 	pwhg_analysis_driver.o random.o cernroutines.o opencount.o	\
 	$(FPEOBJ)
@@ -250,7 +249,7 @@ main-PYTHIA-lhef: $(PYTHIA)
 
 # target to read event file, shower events with PYTHIA8 + analysis
 PYTHIA8=main-PYTHIA8.o pythia8F77.o boostrot.o powheginput.o \
-	$(PWHGANAL) opencount.o lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pdfdummies.o \
+	$(PWHGANAL) opencount.o lhefread.o newunit.o pdfdummies.o \
 	random.o cernroutines.o bra_ket_subroutines.o changescalup.o \
 	$(FPEOBJ)
 
@@ -296,6 +295,5 @@ $(OBJ):
 	mkdir -p $(OBJ)
 
 ##########################################################################
-
 
 
