New Makefile for new rwgt
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3283 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/VBF_Z_Z/Makefile-old
+++ b/VBF_Z_Z/Makefile-old
@@ -67,8 +67,7 @@ INCLUDE =$(wildcard ../include/*.h *.h include/*.h)
 
 ifeq ("$(PDF)","lhapdf")
 LHAPDF_CONFIG=lhapdf-config
-PDFPACK=lhapdf6if.o lhapdf6ifcc.o
-FJCXXFLAGS+= $(shell $(LHAPDF_CONFIG) --cxxflags)
+PDFPACK=lhapdfif.o
 LIBSLHAPDF= -Wl,-rpath,$(shell $(LHAPDF_CONFIG) --libdir)  -L$(shell $(LHAPDF_CONFIG) --libdir) -lLHAPDF
 ifeq  ("$(STATIC)","-static") 
 ## If LHAPDF has been compiled with gfortran and you want to link it statically, you have to include
@@ -108,7 +107,7 @@ LIBS+=$(LHAPDFLIB) -Lvbfnlo-files -lvbfnlo
 %.o: %.cc
 	$(CC) $(DEBUG) -c -o $(OBJ)/$@ $^ $(FJCXXFLAGS)
 
-LIBS+=-lz
+
 USER=init_couplings.o init_processes.o Born_phsp_zz.o Born.o virtual.o \
 	calc_invariants.o compute_tensors_zz.o compute_tensors_zz_real.o \
 	convert_coup.o real.o  \
@@ -127,7 +126,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o \
 	phi1_2m_nobw.o phi1_2m_bw.o mint_upb.o \
 	opencount.o pwhgreweight.o setlocalscales.o validflav.o       \
 	ubprojections.o \
-	$(PDFPACK) $(USER) $(SYSOBJ)  lhefread.o pwhg_io_interface.o rwl_weightlists.o rwl_setup_param_weights.o
+	$(PDFPACK) $(USER) $(SYSOBJ) 
 
 # target to generate LHEF output
 pwhg_main:$(PWHG) vbfnlo-files/libvbfnlo.a 
@@ -139,7 +138,7 @@ vbfnlo-files/libvbfnlo.a: vbfnlo-files/*f
 	cd vbfnlo-files ; make
 
 LHEFANAL=lhef_analysis.o boostrot.o random.o cernroutines.o  \
-	 opencount.o powheginput.o lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pwhg_analysis_driver.o \
+	 opencount.o powheginput.o lhefread.o newunit.o pwhg_analysis_driver.o \
 	 $(PWHGANAL) $(SYSOBJ)
 
 
@@ -150,7 +149,7 @@ lhef_analysis:$(LHEFANAL)
 # target to read event file, shower events with PYTHIA + analysis
 PYTHIA=main-PYTHIA.o setup-PYTHIA-lhef.o pythia.o bra_ket_subroutines.o\
 	boostrot.o powheginput.o  \
-	lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o \
+	lhefread.o newunit.o \
 	pwhg_analysis_driver.o pdfdummies.o \
 	random.o cernroutines.o opencount.o  $(PWHGANAL) $(SYSOBJ)
 
@@ -164,4 +163,3 @@ clean:
         vbfnlo-files/*/*.o \
         pwhg_main lhef_analysis \
 	main-PYTHIA-lhef
-
