new Makefile for new rwgt
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3293 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/WZ/Makefile-old
+++ b/WZ/Makefile-old
@@ -59,8 +59,7 @@ ifeq ("$(PDF)","lhapdf")
 #LHAPDF_CONFIG=/users/melia/local/bin/lhapdf-config
 #LHAPDF_CONFIG=~/Pheno/PDFpacks/lhapdf-5.8.4-$(FC)/bin/lhapdf-config
 LHAPDF_CONFIG=lhapdf-config
-PDFPACK=lhapdf6if.o lhapdf6ifcc.o
-FJCXXFLAGS+= $(shell $(LHAPDF_CONFIG) --cxxflags)
+PDFPACK=lhapdfif.o
 LIBSLHAPDF= -Wl,-rpath,$(shell $(LHAPDF_CONFIG) --libdir)  -L$(shell $(LHAPDF_CONFIG) --libdir) -lLHAPDF
 ifeq  ("$(STATIC)","-static") 
 ## If LHAPDF has been compiled with gfortran and you want to link it statically, you have to include
@@ -112,7 +111,7 @@ endif
 %.o: %.cc
 	$(CXX) $(DEBUG) -c -o $(OBJ)/$@ $^ $(FJCXXFLAGS)
 
-LIBS+=-lz
+
 USER=init_couplings.o smcouplings.o init_processes.o Born_phsp.o Born.o \
      suppfact2e.o virtual.o cpropfac.o real.o phi1_2.o phi3m0.o boost.o \
      breit.o breitplusgam.o couplz.o qqb_wz.o amps_anom.o spinoru.o a6tree.o \
@@ -131,7 +130,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 	setstrongcoupl.o integrator.o newunit.o mwarn.o sigsoftvirt.o	\
 	sigcollsoft.o sigvirtual.o setlocalscales.o validflav.o mint_upb.o  \
 	pwhgreweight.o opencount.o ubprojections.o utils.o \
-        $(PDFPACK) $(USER) $(FPEOBJ) lhefread.o pwhg_io_interface.o rwl_weightlists.o rwl_setup_param_weights.o
+        $(PDFPACK) $(USER) $(FPEOBJ)
 
 # target to generate LHEF output
 pwhg_main:$(PWHG)
@@ -139,7 +138,7 @@ pwhg_main:$(PWHG)
 
 LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o utils.o \
      opencount.o powheginput.o $(PWHGANAL)	\
-     lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
+     lhefread.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
 
 # target to analyze LHEF output
 lhef_analysis:$(LHEF)
@@ -149,7 +148,7 @@ lhef_analysis:$(LHEF)
 
 # target to read event file, shower events with HERWIG + analysis
 HERWIG=main-HERWIG.o setup-HERWIG-lhef.o herwig.o boostrot.o	\
-	powheginput.o $(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o	\
+	powheginput.o $(PWHGANAL) lhefread.o	\
 	pdfdummies.o opencount.o $(FPEOBJ) 
 
 main-HERWIG-lhef: $(HERWIG)
@@ -157,7 +156,7 @@ main-HERWIG-lhef: $(HERWIG)
 
 # target to read event file, shower events with PYTHIA + analysis
 PYTHIA=main-PYTHIA.o setup-PYTHIA-lhef.o pythia.o boostrot.o powheginput.o\
-       $(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pdfdummies.o	\
+       $(PWHGANAL) lhefread.o newunit.o pdfdummies.o	\
        pwhg_analysis_driver.o random.o cernroutines.o opencount.o $(FPEOBJ)
 
 main-PYTHIA-lhef: $(PYTHIA)
@@ -168,4 +167,3 @@ main-PYTHIA-lhef: $(PYTHIA)
 clean:
 	rm -f $(OBJ)/*.o pwhg_main lhef_analysis main-HERWIG-lhef	\
 	main-PYTHIA-lhef
-
