new Makefile for new rwgt
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3294 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/Z2jet/Makefile-old
+++ b/Z2jet/Makefile-old
@@ -71,8 +71,7 @@ FF=$(F77) $(FFLAGS) $(FPE) $(OPT) $(DEBUG) -I$(INCLUDE0) -I$(INCLUDE2) -I$(INCLU
 
 ifeq ("$(PDF)","lhapdf")
 LHAPDF_CONFIG=lhapdf-config
-PDFPACK=lhapdf6if.o lhapdf6ifcc.o
-FJCXXFLAGS+= $(shell $(LHAPDF_CONFIG) --cxxflags)
+PDFPACK=lhapdfif.o
 LIBSLHAPDF= -Wl,-rpath,$(shell $(LHAPDF_CONFIG) --libdir)  -L$(shell $(LHAPDF_CONFIG) --libdir) -lLHAPDF
 ifeq  ("$(STATIC)","-static") 
 ## If LHAPDF has been compiled with gfortran and you want to link it statically, you have to include
@@ -113,8 +112,7 @@ endif
 %.o: %.cc
 	$(CXX) $(DEBUG) -c -o $(OBJ)/$@ $^ $(FJCXXFLAGS)
 
-USERAUX=conjcolor.o clinkqa.o clinkqga.o isodd.o iseven.o setupBmunu.o
-LIBS+=-lz
+USERAUX=conjcolor.o clinkqa.o clinkqga.o isodd.o iseven.o setupBmunu.o 
 USER=$(USERAUX) $(PWHGANAL) init_processes.o init_processes_born_MCFM.o init_processes_real_MCFM.o \
      setborn.o setvirtual.o real.o init_couplings.o Born_phsp.o borncolour_lh.o borncolourqagg.o \
      reorderZ0lord.o reorderZ0real.o qqb_z2jet_pwhg.o qqb_z2jet_v_pwhg.o qqb_z2jet_g_pwhg.o \
@@ -139,7 +137,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 	setstrongcoupl.o integrator.o newunit.o mwarn.o sigsoftvirt.o	\
 	sigcollsoft.o sigvirtual.o mint_upb.o opencount.o pwhgreweight.o \
         setlocalscales.o validflav.o ubprojections.o \
-        $(PDFPACK) $(USER) $(MCFMfiles) $(FPEOBJ) lhefread.o pwhg_io_interface.o rwl_weightlists.o rwl_setup_param_weights.o
+        $(PDFPACK) $(USER) $(MCFMfiles) $(FPEOBJ)
 
 
 
@@ -156,7 +154,7 @@ pwhg_main:  $(PWHG)
 
 LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o		\
      opencount.o powheginput.o $(PWHGANAL)	\
-     lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
+     lhefread.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
 
 # target to analyze LHEF output
 lhef_analysis:$(LHEF)
@@ -166,14 +164,14 @@ lhef_analysis:$(LHEF)
 
 # target to read event file, shower events with HERWIG + analysis
 HERWIG=main-HERWIG.o setup-HERWIG-lhef.o herwig.o powheginput.o\
-	$(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o opencount.o pdfdummies.o $(FPEOBJ)
+	$(PWHGANAL) lhefread.o opencount.o pdfdummies.o $(FPEOBJ)
 
 main-HERWIG-lhef: $(HERWIG)
 	$(FF) $(patsubst %,$(OBJ)/%,$(HERWIG))  $(LIBSFASTJET)  $(STATIC) -o $@
 
 # target to read event file, shower events with PYTHIA + analysis
 PYTHIA=main-PYTHIA.o setup-PYTHIA-lhef.o pythia.o boostrot.o powheginput.o \
-	$(PWHGANAL) lhefread.o pwhg_io_interface.o rwl_weightlists.o newunit.o bra_ket_subroutines.o \
+	$(PWHGANAL) lhefread.o newunit.o bra_ket_subroutines.o \
 	pwhg_analysis_driver.o random.o cernroutines.o opencount.o	\
 	$(FPEOBJ)
 
@@ -187,5 +185,4 @@ main-PYTHIA-lhef: $(PYTHIA)
 clean:
 	rm -f $(OBJ)/*.o pwhg_main lhef_analysis main-HERWIG-lhef	\
 	main-PYTHIA-lhef
-
 
