Fixed makefile to allow compilation of pwhg_main.
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3299 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/trijet/Makefile
+++ b/trijet/Makefile
@@ -94,7 +94,7 @@ endif
 
 # PYTHIA 8
 PYTHIA8LOCATION=/home/oleari/fortran/pythia8183
-FJCXXFLAGS+=-I$(PYTHIA8LOCATION)/include/ -I$(PYTHIA8LOCATION)/include/Pythia8
+PY8CXXFLAGS+=-I$(PYTHIA8LOCATION)/include/ -I$(PYTHIA8LOCATION)/include/Pythia8
 LIBPYTHIA8=-L$(PYTHIA8LOCATION)/lib/archive -lpythia8 -llhapdfdummy -lstdc++
 
 PWHGANAL=pwhg_bookhist-new.o pwhg_analysis-dummy.o
