Fixes to dis-lepton that make it compile with new rwgt setup
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@3300 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/dislepton-jet/Makefile
+++ b/dislepton-jet/Makefile
@@ -179,7 +179,7 @@ PYTHIA=main-PYTHIA.o setup-PYTHIA-lhef.o pythia-6.4.25-decay.o \
 # to which we applied a simple patch to enable slepton decays
 # (for clarity a separate patch file is included which is not needed otherwise)
 main-PYTHIA-lhef: $(PYTHIA) libmodel.a
-	$(FF) $(patsubst %,obj/%,$(PYTHIA)) -L$(LIBDIRMG) -lmodel $(LIBSFASTJET)  $(STATIC) -o $@
+	$(FF) $(patsubst %,obj/%,$(PYTHIA)) -L$(LIBDIRMG) -lmodel $(LIBSFASTJET) $(LIBS) $(STATIC) -o $@
 
 
 # autobuild targets for scalar loop integral libraries FF and QCDLoop
